# personal-assistant

./: .gitignore  Dockerfile  LICENSE  README.md  makefile  pyproject.toml  settings.toml  setup.cfg
.github/workflows/: build.yml  ci.yml  format.yml  pep8.yml
docker/: docker-compose.prod.yml  docker-compose.test.yml
personal_assistant/integrational_tests/: conftest.py  utils.py
personal_assistant/integrational_tests/auth/: test_authorise.py  test_user.py
personal_assistant/integrational_tests/budget/: conftest.py  test_expense.py  test_expense_category.py
personal_assistant/integrational_tests/events/: test_events_api.py
personal_assistant/integrational_tests/notes/: test_notes_crud.py
personal_assistant/integrational_tests/tasks/: test_tasks.py
personal_assistant/integrational_tests/user/: test_user.py  test_user_filters.py
personal_assistant/src/: cli.py  create_migrations.py  exception_handlers.py  main.py
personal_assistant/src/alembic/: create_migrations.py  env.py
personal_assistant/src/alembic/versions/: 01c261f6774c_add_expenses_categories_table.py  047f07327d97_create_expenses_table.py  04ad9941b0dc_add_notes_table.py  0c7cf0498bb2_create_events.py  1e5fb083e80d_init.py  1f5f227a5a6b_greate_todo_table.py  3109c8c01810_add_events_expenses.py  3336aa921d61_.py  353ce6400271_init_user_model.py  4aef60b10c63_.py  4fbe048ae27d_init.py  590086b59ce4_init_user_model.py  9687e09e1816_create_expenses_categories_table.py  97e9468f676f_init.py  9ccd99dcd2aa_extract_base_model.py  cf10c15fd556_create_expenses_table.py  f5ff894b1823_.py  f9a4cbe57362_created_update_to_timezone_aware_fields.py
personal_assistant/src/api/: dependencies.py
personal_assistant/src/configs/: app.py  auth.py
personal_assistant/src/models/: __init__.py  base.py  budget.py  budget_base.py  budget_expense.py  budget_expense_category.py  database_session.py  event.py  expense.py  expense_category.py  note.py  todo.py  user.py
personal_assistant/src/repositories/: __init__.py  database_session.py  event_repository.py  expense.py  expense_category.py  note.py  task.py  user.py
personal_assistant/src/schemas/: __init__.py  event.py  expense.py  expense_category.py  note.py  tasks.py  user.py
personal_assistant/src/services/: __init__.py  authenticate.py  event_service.py  expense.py  expense_category.py  note_service.py  tasks.py  user_service.py
personal_assistant/tests/: test_stub.py
presentation/: Личный помощник.pptx
reports/: Бондаренко.md  Харитонова.md
отчеты/: Кушнир.md  Шипетина.md  бондаренко.md  зеленцов.md
(+26 files in other folders)
