[project]
name = "personal_assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreyQuantum",email = "zelentsov1254@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "fastapi[standard] (>=0.121.1,<0.122.0)",
    "dynaconf (>=3.2.12,<4.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "testcontainers (>=4.13.2,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
]

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "pytest (>=9.0.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
